# LatentController

./: .gitignore  LatentController.ipynb  README.md  agent.py  benchmark.py  chat.py  cli.py  config.py  data.py  dataset.py  engine.py  eval_gen1.py  generate_phase5_data.py  hardware.py  inference.py  memory.py  model.py  model_mlx.py  monitor.sh  mttl_1.txt  orchestrator.py  prepare_gen1_data.py  preseed_memory.py  requirements.txt  run_colab.py  tokenizer_utils.py  train.py  train_colab.ipynb  train_gen1.py  train_micro.py  train_overnight.py  train_phase1.py  train_phase2.py  train_phase3.py  train_phase4.py  train_phase5.py  utils.py
.copilot/session-state/56528879-1909-452a-ae69-6a42607f4689/files/: coherency_audit.md
.github/: copilot-instructions.md
ant_memory/: Cargo.toml  pyproject.toml
ant_memory/src/: lib.rs  memory.rs  trie.rs
ant_train/: Cargo.toml
ant_train/src/: config.rs  data.rs  engine.rs  inference.rs  main.rs  model.rs  train.rs  trie.rs
docs/: ARCHITECTURE.md  BUGS.md  SOURCE_PROVENANCE.md  STATUS.md  TRAINING_INFERENCE_GAPS.md  tiled_agents_proposal.md  training_report.md
