[package]
name = "ant_train"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/main.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
rand = "0.8"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[profile.release]
opt-level = 3
